--- a/src/main/resources/com/example/wordle/view.fxml
+++ b/src/main/resources/com/example/wordle/view.fxml
@@ -5,12 +5,10 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.wordle.Controller">
+<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml" fx:controller="com.example.wordle.Controller">
   <padding>
     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
   </padding>
 
   <Label fx:id="debugText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
 </VBox>
