--- a/src/main/resources/app/wordle/view.fxml
+++ b/src/main/resources/app/wordle/view.fxml
@@ -5,10 +5,11 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml" fx:controller="com.example.wordle.Controller">
+<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml" fx:controller="app.wordle.Controller">
   <padding>
     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
   </padding>
 
   <Label fx:id="debugText"/>
+  <Button text="debug" onAction="#debugButton"/>
 </VBox>
