--- a/src/main/resources/app/wordle/view.fxml
+++ b/src/main/resources/app/wordle/view.fxml
@@ -1,15 +1,27 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
+
+<?import javafx.geometry.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.shape.*?>
+
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml" fx:controller="app.wordle.Controller">
   <padding>
     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
   </padding>
 
-  <Label fx:id="debugText"/>
-  <Button text="debug" onAction="#debugButton"/>
+  <GridPane fx:id="tileGrid" onKeyPressed="#keyboardInput" alignment="CENTER" hgap="5" vgap="5">
+  </GridPane>
+
+  <GridPane fx:id="keyboard" alignment="CENTER" hgap="5" vgap="5">
+
+  </GridPane>
+
+  <VBox alignment="CENTER">
+    <Label fx:id="debugText"/>
+    <Button text="debug" onAction="#debugButton"/>
+  </VBox>
+
+
 </VBox>
