--- a/src/main/resources/app/wordle/style.css
+++ b/src/main/resources/app/wordle/style.css
@@ -11,6 +11,7 @@
 .root {
     -fx-background-color: #121213;
     -fx-font-family: "Franklin";
+    -fx-font-file: "karnak-normal-400.ttf";
 }
 
 #navbar Label {
