--- a/src/main/resources/app/wordle/style.css
+++ b/src/main/resources/app/wordle/style.css
@@ -14,7 +14,7 @@
 }
 
 #navbar Label {
-    -fx-font-family: "Karnak";
+    -fx-font-family: "Franklin";
     -fx-text-fill: white;
     -fx-font-size: 42px;
     -fx-font-weight: bold;
