--- a/src/main/resources/app/wordle/view.fxml
+++ b/src/main/resources/app/wordle/view.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.control.*?>
 
-<VBox fx:id="root" alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml" fx:controller="app.wordle.Controller">
+<VBox fx:id="root" alignment="TOP_CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml" fx:controller="app.wordle.Controller">
   
-  <VBox alignment="TOP_CENTER">
+  <VBox alignment="CENTER">
     <HBox fx:id="navbar" alignment="CENTER">
       <Button onAction="#help" text="Help"/>
       <Button onAction="#scoreboard" text="Scoreboard"/>
@@ -15,18 +15,25 @@
       <Button onAction="#settings" text="Settings"/>
     </HBox>
     <Line endX="2000" strokeWidth="0.5" stroke="#818384"/>
+    <padding>
+      <Insets top="20.0"/>
+    </padding>
   </VBox>
 
-  <VBox>
-    <GridPane fx:id="tileGrid" onKeyPressed="#physicalKeyboardInput" alignment="CENTER" hgap="5" vgap="5"/>
-    <VBox.margin>
-      <Insets bottom="10.0" top="10.0"/>
-    </VBox.margin>
+  <VBox alignment="CENTER">
+    <GridPane fx:id="tileGrid" alignment="TOP_CENTER" onKeyPressed="#physicalKeyboardInput" hgap="5" vgap="5"/>
+    <padding>
+      <Insets bottom="20.0" top="20.0"/>
+    </padding>
   </VBox>
 
-  <VBox alignment="BOTTOM_CENTER">
+  <VBox alignment="CENTER">
     <GridPane fx:id="keyboard1" alignment="CENTER" hgap="6.5"/>
     <GridPane fx:id="keyboard2" alignment="CENTER" hgap="6.5" style="-fx-padding: 6.5 0"/>
     <GridPane fx:id="keyboard3" alignment="CENTER" hgap="6.5"/>
+    <padding>
+      <Insets bottom="20.0"/>
+    </padding>
   </VBox>
+
 </VBox>
