--- a/src/main/resources/app/wordle/view.fxml
+++ b/src/main/resources/app/wordle/view.fxml
@@ -21,7 +21,10 @@
   </VBox>
 
   <VBox alignment="CENTER">
-    <GridPane fx:id="tileGrid" alignment="TOP_CENTER" onKeyPressed="#physicalKeyboardInput" hgap="5" vgap="5"/>
+    <StackPane>
+      <GridPane fx:id="tileGrid" alignment="CENTER" onKeyPressed="#physicalKeyboardInput" hgap="5" vgap="5"/>
+      <VBox fx:id="notificationStack" alignment="TOP_CENTER" spacing="15"/>
+    </StackPane>
     <padding>
       <Insets bottom="20.0" top="20.0"/>
     </padding>
